--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,34 @@
         <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.MeetingActivity" />
 
+        <!-- AppRTC demo Activities -->
+        <activity android:name="org.appspot.apprtc.ConnectActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleInstance"
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/AppTheme">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="https" android:host="appr.tc"/>
+                <data android:scheme="http" android:host="appr.tc"/>
+            </intent-filter>
+        </activity>
+
+        <activity android:name="org.appspot.apprtc.SettingsActivity"
+            android:label="@string/settings_name"
+            android:theme="@style/AppTheme">
+        </activity>
+
+        <activity android:name="org.appspot.apprtc.CallActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="fullUser"
+            android:configChanges="orientation|smallestScreenSize|screenSize|screenLayout"
+            android:theme="@style/CallActivityTheme">
+        </activity>
+
         <service
             android:name=".service.ScreenCaptureService"
             android:enabled="true"
